Created responsive design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,78 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <div class="instrument">
+        <span>freeCodeCamp</span>
+        <div class="keys">
+            <div class="key white">
+                <div class="key black"></div>
+            </div>
+            <div class="key white">
+                <div class="key black"></div>
+            </div>
+            <div class="key white"></div>
+            <div class="key white">
+                <div class="key black"></div>
+            </div>
+            <div class="key white">
+                <div class="key black"></div>
+            </div>
+            <div class="key white">
+                <div class="key black"></div>
+            </div>
+            <div class="key white"></div>
+            <div class="key white hiddable">
+                <div class="key black hiddable"></div>
+            </div>
+            <div class="key white hiddable">
+                <div class="key black hiddable"></div>
+            </div>
+            <div class="key white hiddable"></div>
+            <div class="key white hiddable">
+                <div class="key black hiddable"></div>
+            </div>
+            <div class="key white hiddable">
+                <div class="key black hiddable"></div>
+            </div>
+            <div class="key white hiddable">
+                <div class="key black hiddable"></div>
+            </div>
+            <div class="key white hiddable"></div>
+            <div class="key white hiddable-two">
+                <div class="key black hiddable-two"></div>
+            </div>
+            <div class="key white hiddable-two">
+                <div class="key black hiddable-two"></div>
+            </div>
+            <div class="key white hiddable-two"></div>
+            <div class="key white hiddable-two">
+                <div class="key black hiddable-two"></div>
+            </div>
+            <div class="key white hiddable-two">
+                <div class="key black hiddable-two"></div>
+            </div>
+            <div class="key white hiddable-two">
+                <div class="key black hiddable-two"></div>
+            </div>
+            <div class="key white hiddable-two"></div>
+            <div class="key white hiddable-three">
+                <div class="key black hiddable-three"></div>
+            </div>
+            <div class="key white hiddable-three">
+                <div class="key black hiddable-three"></div>
+            </div>
+            <div class="key white hiddable-three"></div>
+            <div class="key white hiddable-three">
+                <div class="key black hiddable-three"></div>
+            </div>
+            <div class="key white hiddable-three">
+                <div class="key black hiddable-three"></div>
+            </div>
+            <div class="key white hiddable-three">
+                <div class="key black hiddable-three"></div>
+            </div>
+            <div class="key white hiddable-three"></div>
+        </div>
+    </div>
 </body>
 </html>
